# account-v2

./: README.md  pyproject.toml  requirements.txt
account/: __main__.py  cli.py  gui.py  gui_old.py
account/core/: crypto.py  keychain.py  vault.py
account/db/: database.py
account/services/: backup.py  browser_import.py  import_export.py  password_generator.py
scripts/: test_cli.py
